--- a/Mm0205.IconConverter.Wpf/Mm0205.IconConverter.Wpf.csproj
+++ b/Mm0205.IconConverter.Wpf/Mm0205.IconConverter.Wpf.csproj
@@ -2,8 +2,16 @@
 
   <PropertyGroup>
     <OutputType>WinExe</OutputType>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>net5.0-windows</TargetFramework>
     <UseWPF>true</UseWPF>
   </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft-WindowsAPICodePack-Shell" Version="1.1.4" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Mm0205.IconConverter\Mm0205.IconConverter.csproj" />
+  </ItemGroup>
 
 </Project>
