--- a/Mm0205.IconConverter/Mm0205.IconConverter.csproj
+++ b/Mm0205.IconConverter/Mm0205.IconConverter.csproj
@@ -1,7 +1,13 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>net5.0</TargetFramework>
+    <Nullable>enable</Nullable>
   </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="System.Drawing.Common" Version="5.0.1" />
+    <PackageReference Include="System.IO.Abstractions" Version="13.2.23" />
+  </ItemGroup>
 
 </Project>
